--- a/first_project/templates/first_app/index.html
+++ b/first_project/templates/first_app/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
   </head>
   <body>
-    <h1> Django Logo Page</h1>
+    <h1> Django Welcome Page</h1>
     {{ insert_me }}
     <img src="{% static 'images/django.png' %}" alt="thank you">
   </body>
