--- a/first_project/templates/first_app/index.html
+++ b/first_project/templates/first_app/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-{% load static %}
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
-    <title>Django Home</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <title>Home</title>
   </head>
   <body>
-    <h1> Django Welcome Page</h1>
-    {{ insert_me }}
-    <img src="{% static 'images/django.png' %}" alt="thank you">
+    <h1>Welcome!</h1>
+    <h2>Go to /users to see the list of user information!</h2>
+
   </body>
 </html>
